# tdw_ai

./: .env.example  .gitignore  .vercelignore  AGENT_ENGINEERING_RUNBOOK.md  AGENT_ORCHESTRATION.md  CODEX_DEVELOPMENT_PLAN.md  LAUNCH_PROMPT.md  LICENSE  MASTER_PRD.md  README.md  guide_v07.md  package-lock.json  package.json  pyproject.toml  requirements-ri.txt  vercel.json
connectors/: AGENT_HANDOFF.md  __init__.py  _shared.py  base.py  biomcp_adapter.py  biomcp_generic.py  biothings.py  chembl.py  clinicaltrials.py  gwas.py  local_docs.py  octagon_adapter.py  octagon_market.py  openfda.py  opentargets.py  pharmgkb.py  pubmed.py  reactome.py  uniprot.py
docs/: BIOMCP_MIGRATION_GUIDE.md  BioMCP_Flexible Biotech Diligence Eng.md  LIVE_CASE_REVIEW.md  RI_CASES_MONOLITHIC.md  RI_CSV_STATIC_INTAKE.md  RI_DEVELOPMENT_FOCUS.md  RI_ENRICHMENT_METHOD.md  TARGET_INDICATION_BENCHMARK_IMPLEMENTATION.md
evals/: AGENT_HANDOFF.md  __init__.py  artifacts.py  benchmark_contract.py  citation_fidelity.py  evidence_coverage.py  run_evals.py  trial_hallucination.py  types.py  unsupported_claims.py
pipeline/: AGENT_HANDOFF.md  __init__.py  _artifacts.py  apply_ri_cases_csv.py  apply_seed_resolution.py  apply_tier_a_comps_to_enriched.py  artifact_writer.py  batch_ri_fixture.py  bootstrap_ri_cases_enriched.py  brown_vivo_profiles.py  build_graph.py  build_opportunity_bundle.py  build_ri_combined.py  build_ri_exhibit.py  build_ri_lens.py  build_ri_precedents.py  build_sources.py  comp_site_dossier.py  comp_site_extract.py  config_loader.py  enrich_ri_biomcp.py  enrich_ri_case.py  (+45 more)
(+984 files in other folders)
